kubernetes/apps/monitoring-system/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: Observability
spec:
  hostnames: ["headlamp.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: networking-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *name
          namespace: monitoring-system
          port: 4466
